project('stella-highscore', ['cpp', 'c'],
  version : '0.1',
  default_options : [ 'cpp_std=c++20' ]
)

cc = meson.get_compiler('c')

cores_dir = get_option('prefix') / get_option('libdir') / 'highscore' / 'cores'

stella_deps = [
  dependency('highscore-1'),
  dependency('gio-2.0'),
  cc.find_library('m', required : false),
]

stella_c_cpp_args = [
  '-fvisibility=hidden',
  '-DSOUND_SUPPORT',
  '-D__HIGHSCORE__',
]

stella_include_dirs = include_directories([
  '../..',
  '../../common',
  '../../common/audio',
  '../../common/tv_filters',
  '../../common/repository/sqlite',
  '../../emucore',
  '../../emucore/tia',
  '../../lib/json',
  '../../lib/httplib',
  '../../lib/sqlite',
  '../../os/highscore',
])

stella_source = [
  '../../os/highscore/stella-highscore.cxx',
  '../../os/highscore/FSNodeHIGHSCORE.cxx',
  '../../os/highscore/StellaHIGHSCORE.cxx',
  '../../common/AudioQueue.cxx',
  '../../common/AudioSettings.cxx',
  '../../common/Base.cxx',
  '../../common/Bezel.cxx',
  '../../common/DevSettingsHandler.cxx',
  '../../common/FpsMeter.cxx',
  '../../common/FSNodeZIP.cxx',
  '../../common/JoyMap.cxx',
  '../../common/KeyMap.cxx',
  '../../common/Logger.cxx',
  '../../common/MouseControl.cxx',
  '../../common/PaletteHandler.cxx',
  '../../common/PhosphorHandler.cxx',
  '../../common/PhysicalJoystick.cxx',
  '../../common/PJoystickHandler.cxx',
  '../../common/PKeyboardHandler.cxx',
  '../../common/RewindManager.cxx',
  '../../common/StaggeredLogger.cxx',
  '../../common/StateManager.cxx',
  '../../common/TimerManager.cxx',
  '../../common/VideoModeHandler.cxx',
  '../../common/tv_filters/AtariNTSC.cxx',
  '../../common/tv_filters/NTSCFilter.cxx',
  '../../common/repository/CompositeKeyValueRepository.cxx',
  '../../common/repository/CompositeKVRJsonAdapter.cxx',
  '../../common/repository/KeyValueRepositoryConfigfile.cxx',
  '../../common/repository/KeyValueRepositoryJsonFile.cxx',
  '../../common/repository/KeyValueRepositoryPropertyFile.cxx',
  '../../emucore/AtariVox.cxx',
  '../../emucore/Bankswitch.cxx',
  '../../emucore/Booster.cxx',
  '../../emucore/Cart.cxx',
  '../../emucore/CartCreator.cxx',
  '../../emucore/CartDetector.cxx',
  '../../emucore/CartEnhanced.cxx',
  '../../emucore/Cart03E0.cxx',
  '../../emucore/Cart0840.cxx',
  '../../emucore/Cart0FA0.cxx',
  '../../emucore/Cart2K.cxx',
  '../../emucore/Cart3E.cxx',
  '../../emucore/Cart3EPlus.cxx',
  '../../emucore/Cart3EX.cxx',
  '../../emucore/Cart3F.cxx',
  '../../emucore/Cart4A50.cxx',
  '../../emucore/Cart4K.cxx',
  '../../emucore/Cart4KSC.cxx',
  '../../emucore/CartAR.cxx',
  '../../emucore/CartARM.cxx',
  '../../emucore/CartBF.cxx',
  '../../emucore/CartBFSC.cxx',
  '../../emucore/CartBUS.cxx',
  '../../emucore/CartCDF.cxx',
  '../../emucore/CartCM.cxx',
  '../../emucore/CartCTY.cxx',
  '../../emucore/CartCV.cxx',
  '../../emucore/CartDF.cxx',
  '../../emucore/CartDFSC.cxx',
  '../../emucore/CartDPC.cxx',
  '../../emucore/CartDPCPlus.cxx',
  '../../emucore/CartE0.cxx',
  '../../emucore/CartE7.cxx',
  '../../emucore/CartEF.cxx',
  '../../emucore/CartEFSC.cxx',
  '../../emucore/CartF0.cxx',
  '../../emucore/CartF4.cxx',
  '../../emucore/CartF4SC.cxx',
  '../../emucore/CartF6.cxx',
  '../../emucore/CartF6SC.cxx',
  '../../emucore/CartF8.cxx',
  '../../emucore/CartF8SC.cxx',
  '../../emucore/CartFA2.cxx',
  '../../emucore/CartFA.cxx',
  '../../emucore/CartFC.cxx',
  '../../emucore/CartFE.cxx',
  '../../emucore/CartGL.cxx',
  '../../emucore/CartMDM.cxx',
  '../../emucore/CartMVC.cxx',
  '../../emucore/CartSB.cxx',
  '../../emucore/CartTVBoy.cxx',
  '../../emucore/CartUA.cxx',
  '../../emucore/CartWD.cxx',
  '../../emucore/CartWF8.cxx',
  '../../emucore/CartX07.cxx',
  '../../emucore/CompuMate.cxx',
  '../../emucore/Console.cxx',
  '../../emucore/Control.cxx',
  '../../emucore/ControllerDetector.cxx',
  '../../emucore/DispatchResult.cxx',
  '../../emucore/Driving.cxx',
  '../../emucore/EmulationTiming.cxx',
  '../../emucore/EmulationWorker.cxx',
  '../../emucore/EventHandler.cxx',
  '../../emucore/FBSurface.cxx',
  '../../emucore/FrameBuffer.cxx',
  '../../emucore/FSNode.cxx',
  '../../emucore/Genesis.cxx',
  '../../emucore/GlobalKeyHandler.cxx',
  '../../emucore/Joy2BPlus.cxx',
  '../../emucore/Joystick.cxx',
  '../../emucore/Keyboard.cxx',
  '../../emucore/KidVid.cxx',
  '../../emucore/Lightgun.cxx',
  '../../emucore/M6502.cxx',
  '../../emucore/M6532.cxx',
  '../../emucore/MD5.cxx',
  '../../emucore/MindLink.cxx',
  '../../emucore/MT24LC256.cxx',
  '../../emucore/OSystem.cxx',
  '../../emucore/Paddles.cxx',
  '../../emucore/PlusROM.cxx',
  '../../emucore/PointingDevice.cxx',
  '../../emucore/Props.cxx',
  '../../emucore/PropsSet.cxx',
  '../../emucore/QuadTari.cxx',
  '../../emucore/SaveKey.cxx',
  '../../emucore/Serializer.cxx',
  '../../emucore/Settings.cxx',
  '../../emucore/Switches.cxx',
  '../../emucore/System.cxx',
  '../../emucore/Thumbulator.cxx',
  '../../emucore/tia/AudioChannel.cxx',
  '../../emucore/tia/Audio.cxx',
  '../../emucore/tia/Background.cxx',
  '../../emucore/tia/Ball.cxx',
  '../../emucore/tia/DrawCounterDecodes.cxx',
  '../../emucore/tia/frame-manager/AbstractFrameManager.cxx',
  '../../emucore/tia/frame-manager/FrameLayoutDetector.cxx',
  '../../emucore/tia/frame-manager/FrameManager.cxx',
  '../../emucore/tia/frame-manager/JitterEmulation.cxx',
  '../../emucore/tia/LatchedInput.cxx',
  '../../emucore/tia/Missile.cxx',
  '../../emucore/tia/AnalogReadout.cxx',
  '../../emucore/tia/Player.cxx',
  '../../emucore/tia/Playfield.cxx',
  '../../emucore/TIASurface.cxx',
  '../../emucore/tia/TIA.cxx',
]

arch = build_machine.cpu_family()

if arch == 'x86'
elif arch == 'x86_64'
  stella_c_cpp_args += []
elif arch == 'arm'
elif arch == 'aarch64'
  stella_c_cpp_args += '-DARM'
else
  error('Unsupported CPU family')
endif

shared_library('stella-highscore',
  stella_source,
  dependencies : stella_deps,
  include_directories : stella_include_dirs,
  c_args : stella_c_cpp_args,
  cpp_args : stella_c_cpp_args,
  name_prefix: '',
  install_dir : cores_dir,
  install : true,
)

install_data('stella.highscore',
  install_dir : cores_dir,
)
